// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDimensions renders without dimensions 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n"
  >
    <div
      class="css-text-76zvg2"
      dir="auto"
    />
  </div>
</DocumentFragment>
`;

exports[`useDimensions when the dimensions change renders with the updated dimensions 1`] = `
<DocumentFragment>
  <div
    class="css-view-1dbjc4n"
  >
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      480x640
    </div>
  </div>
</DocumentFragment>
`;
